.nf-test/tests/8ca5dc9e1d8b2ad379da9a4bcca884b7/meta/std.out
ERROR ~ Script compilation error
- file : /Users/hverdonk/nf-core-capheine/.nf-test-8ca5dc9e1d8b2ad379da9a4bcca884b7.nf
- cause: Unexpected input: '{' @ line 24, column 10.
   workflow {
            ^

1 error

NOTE: If this is the beginning of a process or workflow, there may be a syntax error in the body, such as a missing or extra comma, for which a more specific error message could not be produced.

 -- Check '/Users/hverdonk/nf-core-capheine/.nf-test/tests/8ca5dc9e1d8b2ad379da9a4bcca884b7/meta/nextflow.log' file for details
